--- a/templates/webduck/css/custom.css
+++ b/templates/webduck/css/custom.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'AllerLightRegular';
+    font-family: 'AllerLight';
     src: url('../font/aller_lt-webfont.eot');
     src: url('../font/aller_lt-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/aller_lt-webfont.woff') format('woff'),
@@ -10,12 +10,12 @@
 }
 
 @font-face {
-    font-family: 'AllerRegular';
+    font-family: 'Aller';
     src: url('../font/aller_rg-webfont.eot');
     src: url('../font/aller_rg-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/aller_rg-webfont.woff') format('woff'),
         url('../font/aller_rg-webfont.ttf') format('truetype'),
-        url('../font/aller_rg-webfont.svg#AllerRegular') format('svg');
+        url('../font/aller_rg-webfont.svg#Aller') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -31,8 +31,8 @@ body {
 }
 
 .top-bar {
-	height: 50px;
-	line-height: 50px;
+	height: 3.13em;
+	line-height: 3.13em;
 }
 
 .top-bar-js-breakpoint {
@@ -55,13 +55,18 @@ body {
 
 /* Typografie en links */
 #main p, footer p {
-	font-size: 1.1em;
+	font-size: 1em;
+	margin-bottom: 1.875rem;
 }
 
 h2, h3 {
-	font: 1.1875rem AllerRegular, sans-serif;
+	font: 1.875rem Aller, sans-serif;
 	color: #0073AF;
 	margin: 0 0 1.875rem 0;
+}
+
+h3 {
+	font-size: 1.1875em;
 }
 
 h2 a:hover, h3 a:hover {
@@ -69,13 +74,13 @@ h2 a:hover, h3 a:hover {
 }
 
 #diensten-lijst {
-    margin-top: 20px;
+    margin-top: 1.25em;
 }
 
 #diensten-lijst h3 {
-    font: 15px AllerRegular;
+    font: 0.9375em Aller, sans-serif;
     color: #000;
-    margin: 15px 0 0 0;
+    margin: 0.9375em 0 0 0;
 }
 
 .geen-margin {
@@ -96,7 +101,7 @@ form {
 }
 
 textarea {
-	height: 160px;
+	height: 10em;
 }
 
 button, .button {
@@ -122,7 +127,7 @@ a:hover, a:active { outline: 0; }
 
 /* Portfolio */
 .portfolio-max-text-width {
-	max-width: 300px;
+	max-width: 18.75em;
 }
 
 .portfolio-pic {
@@ -148,7 +153,7 @@ a:hover, a:active { outline: 0; }
 footer {
 	background: #4d4d4d url('../img/footer_bg.png') repeat-x;
 	width: 100%;
-	height: 210px;
+	height: 13.13em;
 	clear: both;
 	color: #fff;
 }
@@ -165,18 +170,18 @@ footer a {
 .footer-container {
 	background: url('../img/footer_licht.jpg') 50% 11px no-repeat;
 	overflow: hidden;
-	padding-top: 40px;
+	padding-top: 2.5em;
 }
 
 .margin-for-footer {
-	margin-bottom: 1.875rem;
+	margin-bottom: 1.875em;
 }
 
 
 /* Alleen voor mobiel */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 47.94em) {
 	h2, h3 {
-		margin: 15px 0 15px 0;
+		margin: 0.94em 0 0.94em 0;
 	}
 
 	.no-padding-for-small {
@@ -205,7 +210,7 @@ footer a {
 
 	.tab h2, #header-tekst h2 {
 		color: #fff;
-		margin: 10px 0 10px 0;
+		margin: 0.63em 0 0.63em 0;
 	}
 
 	#tabs-list {
@@ -242,7 +247,7 @@ footer a {
 
 
 /* Alleen voor Desktop */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 48em) {
 	/* Sticky footer hack */
 	html, body {
 		height: 100%;
@@ -337,7 +342,7 @@ footer a {
 	}
 
 	.tab h2, #header-tekst h2 {
-		font: 25px AllerLightRegular, sans-serif;
+		font: 1.56rem AllerLight, sans-serif;
 		color: #fff;
 	}
 
@@ -399,7 +404,7 @@ footer a {
 	#tabs-list li a {
 		width: 160px;
 		height: 50px;
-		font: 17px AllerLightRegular, sans-serif;
+		font: 1.06em AllerLight, sans-serif;
 		color: #99C7DF;
 		display: block;
 		text-align: center;
@@ -455,6 +460,15 @@ footer a {
 .blog ul.actions li {
 	float: left;
 	margin-right: 1.875rem;
+}
+
+
+.blog .single {
+	margin-top: 1.875em;
+}
+
+.blog .single-post p:first-of-type {
+	font-size: 1.1rem!important;
 }
 
 /* Hacks */
