--- a/templates/webduck/css/custom.css
+++ b/templates/webduck/css/custom.css
@@ -59,7 +59,7 @@ p {
 
 }
 
-h2, h3 {
+h2, h3, h4 {
 	font: 1.875rem Aller, sans-serif;
 	color: #0073AF;
 	margin: 0 0 1.875rem 0;
@@ -67,6 +67,11 @@ h2, h3 {
 
 h3 {
 	font-size: 1.1875em;
+}
+
+h4 {
+	font-size: 1.08rem;
+	color: #000;
 }
 
 h2 a:hover, h3 a:hover {
@@ -486,6 +491,11 @@ footer a {
 
 .blog .single-post p:first-of-type {
 	font-size: 1.1rem!important;
+}
+
+/* Specifieke blog typografie */
+.blog p + h3, .blog p + h4 {
+    margin-bottom: 0.1875em;
 }
 
 @media only screen and (max-width: 48em) {
