--- a/templates/webduck/css/custom.css
+++ b/templates/webduck/css/custom.css
@@ -167,7 +167,7 @@ a:hover, a:active { outline: 0; }
 footer {
 	background: #4d4d4d url('../img/footer_bg.png') repeat-x;
 	width: 100%;
-	height: 13.13em;
+	height: 15.13em;
 	clear: both;
 	color: #fff;
 }
@@ -185,6 +185,9 @@ footer a {
 	background: url('../img/footer_licht.jpg') 50% 11px no-repeat;
 	overflow: hidden;
 	padding-top: 2.5em;
+}
+
+.footer-container .columns {
 }
 
 .margin-for-footer {
@@ -462,6 +465,7 @@ footer a {
 
 .blog .meta ul, .blog ul.actions {
 	list-style: none;
+	margin-left: 0;
 }
 
 .blog .meta ul {
@@ -496,6 +500,10 @@ footer a {
 /* Specifieke blog typografie */
 .blog p + h3, .blog p + h4 {
     margin-bottom: 0.1875em;
+}
+
+article ul {
+	margin-left: 1.875rem;
 }
 
 @media only screen and (max-width: 48em) {
