--- a/templates/webduck/css/custom.css
+++ b/templates/webduck/css/custom.css
@@ -497,6 +497,23 @@ footer a {
 	font-size: 1.1rem!important;
 }
 
+.th {
+	line-height: 0;
+	display: block;
+	border: solid 4px #FFF;
+	-webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.2);
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.2);
+	-webkit-transition: all 200ms ease-out;
+	-moz-transition: all 200ms ease-out;
+	max-width: 100%;
+	transition: all 200ms ease-out;
+}
+
+.th:hover,.th:focus {
+	-webkit-box-shadow: 0 0 6px 1px rgba(43,166,203,0.5);
+	box-shadow: 0 0 6px 1px rgba(43,166,203,0.5);
+}
+
 /* Specifieke blog typografie */
 .blog p + h3, .blog p + h4 {
     margin-bottom: 0.1875em;
